KaHIP-0.72
------------------------------------------------------------------------
- bug fix perfectly balanced case in kaffpaE
- better exhaustion of the given amount of imbalance 

KaHIP-0.71
------------------------------------------------------------------------
- added example java jni wrapper to be able to link the KaHIP library within a java project (misc/java_jni_wrapper)

KaHIP-0.7
------------------------------------------------------------------------
- minor bug fixes
- added the possibility to balance edges among blocks as well
- add explicit stack management in strongly connected components algorithm
- switched to GPLv2
- integrated push-relabel flow code

KaHIP-0.62
------------------------------------------------------------------------
- minor bug fixes
- added output filename for partitions
- added additional imbalance for local search to kaffpa if perfectly balanced partitions have to be found
- minor updates to manual
- added install notes


KaHIP-0.61
------------------------------------------------------------------------
- added the size-constrained label propagation algorithm as a main program to compute clusterings

KaHIP-0.6
------------------------------------------------------------------------
- added improved partitioning algorithms for social networks and webgraphs
- more robust io routine independant line length
- added support of node separators in library functions of KaHIP
- added problem description to the manual 
- fixed io bug in graphchecker
- exchange tr1/unordered_map to c++11 std::unordered_map


KaHIP-0.53
------------------------------------------------------------------------
- added a user guide to the release 
- added graph checker tool which can check the graph file format and give you hints on how to correct your graph file
- some minor bug fixes 


KaHIP-0.5
------------------------------------------------------------------------
- initial release