@@ -1,3 +1,7 @@
+Upcoming
+------------------------------------------------------------------------
+- added a small tool to evaluate partition metrics
+
 KaHIP-0.72
 ------------------------------------------------------------------------
 - bug fix perfectly balanced case in kaffpaE
